News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Bookmark__c.field-meta.xml
<CustomField>
    <fullName>BLND_Bookmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookmark</label>
    <referenceTo>BLND_DFFF_Page__c</referenceTo>
    <relationshipLabel>Forms (Bookmark)</relationshipLabel>
    <relationshipName>Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>