News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Data__c.field-meta.xml
<CustomField>
    <fullName>BLND_Data__c</fullName>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>