News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Locked__c.field-meta.xml
<CustomField>
    <fullName>BLND_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>