News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Over1__c.field-meta.xml
<CustomField>
    <fullName>BLND_Over1__c</fullName>
    <label>Over1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>