News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
    <fullName>BLND_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Worksheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>