News UAT/force-app/main/default/objects/BLND_DFFF_Form__c/fields/BLND_Width__c.field-meta.xml
<CustomField>
    <fullName>BLND_Width__c</fullName>
    <label>Width</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>